# delivery-fastapi

./: .gitignore  README.md  dependencies.py  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 436bf73899f2_migracao_inicial.py  9ac7b401c20c_migration_database.py
routes/: auth.py  orders.py
